fix flicker

--- a/src/blocks/header/header__swiper-styles.css
+++ b/src/blocks/header/header__swiper-styles.css
@@ -6,7 +6,7 @@
 .swiper-slide img {
   width: 101%;
   height: 100%;
-  /* object-fit: cover; */
+  transform: translate3d(0, 0, 0);
 }
 
 :root {
